--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-TOKEN=PASTE BOT TOKEN HERE
-CLIENT_ID=PASTE CLIENT ID HERE
+TOKEN=PASTE YOUR BOT TOKEN HERE
+CLIENT_ID=PASTE YOUR BOT CLIENT ID HERE
