--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "chalk": "^5.4.1",
     "colors": "^1.4.0",
+    "debug": "^4.4.3",
     "discord.js": "^14.11.0",
     "discord.js-selfbot-v13": "^3.6.0",
     "dotenv": "^16.4.7",
@@ -16,6 +17,7 @@
     "moment-timezone": "^0.5.47",
     "node-cron": "^3.0.3",
     "node-fetch": "^2.7.0",
-    "tr46": "^3.0.0"
+    "tr46": "^3.0.0",
+    "yaml": "^2.8.2"
   }
 }
