--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-TOKEN=PASTE YOUR BOT TOKEN HERE
-CLIENT_ID=PASTE YOUR BOT CLIENT ID HERE
+TOKEN=PASTE UR BOT TOKEN HERE
+CLIENT_ID=PASTE UR BOT CLIENT ID HERE
