--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "name": "streaming-status-bot",
-  "version": "1.0.0",
-  "description": "AAAAAA",
+  "version": "1.1.0-hotfix",
   "main": "index.js",
   "scripts": {
     "start": "node --expose-gc index.js"
